--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -10,17 +10,12 @@ build:
   os: ubuntu-20.04
   tools:
     python: "3.8"
-    # You can also specify other tool versions:
-    # nodejs: "16"
-    # rust: "1.55"
-    # golang: "1.17"
 
 python:
   # Install our python package before building the docs
   install:
-    - method: pip
+    - method: setuptools
       path: .
-    - requirements: requirements/requirements.txt
 
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
@@ -30,8 +25,3 @@ sphinx:
 # If using Sphinx, optionally build your docs in additional formats such as PDF
 formats:
    - pdf
-
-# Optionally declare the Python requirements required to build your docs
-# python:
-#    install:
-#    - requirements: docs/requirements.txt
