--- a/.github/workflows/python-package.yml
+++ b/.github/workflows/python-package.yml
@@ -1,4 +1,4 @@
-name: Python package
+name: build and test
 
 on:
   push:
@@ -27,7 +27,7 @@ jobs:
         python -m pip install --upgrade pip wheel setuptools
         python -m pip install flake8
         python -m pip install -r requirements/requirements.txt
-        python -m pip install -r requirements/requirements-dev.txt
+        python -m pip install -r requirements/requirements-test.txt
     - name: Lint with flake8
       run: |
         # stop the build if there are Python syntax errors or undefined names
