--- a/examples/ns-3/rlib-wifi-manager/CMakeLists.txt
+++ b/examples/ns-3/rlib-wifi-manager/CMakeLists.txt
@@ -7,5 +7,8 @@ build_lib(
     LIBNAME rlib-wifi-manager
     SOURCE_FILES model/rlib-wifi-manager.cc
     HEADER_FILES model/rlib-wifi-manager.h
-    LIBRARIES_TO_LINK ${libcore}
+    LIBRARIES_TO_LINK
+        ${libcore}
+        ${libwifi}
+        ${libns3-ai}
 )
