--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,8 +1,9 @@
 chex>=0.1.3
 distrax>=0.1.2
 dm-haiku>=0.0.7
-gym>=0.25.0
+gym>=0.25.1
 jax>=0.3.15
 lz4>=4.0.2
 optax>=0.1.3
-scipy>=1.8.1
+scipy>=1.9.0
+tensorboard>=2.9.1
