--- a/requirements/requirements.txt
+++ b/requirements/requirements.txt
@@ -1,5 +1,5 @@
-chex>=0.1.4
-gym>=0.26.0
-jax>=0.3.17
-lz4>=4.0.2
-matplotlib>=3.5.3
+chex~=0.1.5
+gym~=0.26.2
+jax~=0.3.24
+lz4~=4.0.2
+matplotlib~=3.6.2
