--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -7,14 +7,14 @@ version: 2
 
 # Set the version of Python and other tools you might need
 build:
-  os: ubuntu-20.04
+  os: ubuntu-22.04
   tools:
     python: "3.9"
 
 python:
   # Install our python package before building the docs
   install:
-    - method: setuptools
+    - method: pip
       path: .
 
 # Build documentation in the docs/ directory with Sphinx
