--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,13 +35,13 @@ classifiers = [
 dependencies = [
     "chex~=0.1.85",
     "cloudpickle~=3.0.0",
-    "dm-haiku~=0.0.11",
+    "flax~=0.8.0",
     "gymnasium~=0.29.1",
-    "jax~=0.4.21",
-    "jaxlib~=0.4.21",
-    "lz4~=4.3.2",
+    "jax~=0.4.23",
+    "jaxlib~=0.4.23",
+    "lz4~=4.3.3",
     "matplotlib~=3.8.2",
-    "optax~=0.1.7",
+    "optax~=0.1.8",
     "tensorboardX~=2.6.2.2"
 ]
 
@@ -54,6 +54,6 @@ full = [
     "joblib~=1.3.2",
     # "ns3-ai==1.0.2",
     "pygame~=2.5.2",
-    "seaborn~=0.13.0",
+    "seaborn~=0.13.2",
     "tensorflow~=2.15.0"
 ]
