--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,7 +42,8 @@ dependencies = [
     "lz4~=4.3.2",
     "matplotlib~=3.8.2",
     "optax~=0.1.7",
-    "tensorboardX~=2.6.2.2"
+    "tensorboardX~=2.6.2.2",
+    "wandb~=0.16.2"
 ]
 
 [project.optional-dependencies]
