--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,23 +31,24 @@ classifiers = [
 
 dependencies = [
     "cloudpickle~=3.1.1",
-    "gymnasium~=1.1.1",
-    "jax-ai-stack~=2025.2.5",
-    "lz4~=4.4.3",
-    "matplotlib~=3.10.1",
-    "tensorboardX~=2.6.2.2",
-    "wandb~=0.19.8"
+    "evosax~=0.2.0",
+    "gymnasium~=1.2.0",
+    "jax-ai-stack~=2025.4.9",
+    "lz4~=4.4.4",
+    "matplotlib~=3.10.6",
+    "tensorboardX~=2.6.4",
+    "wandb~=0.21.3"
 ]
 
 [project.optional-dependencies]
 docs = [
-    "sphinx~=8.1.3",
+    "sphinx~=8.2.3",
     "sphinx-rtd-theme~=3.0.2"
 ]
 full = [
-    "joblib~=1.4.2",
+    "joblib~=1.5.2",
     # "ns3-ai==1.0.2",
     "pygame~=2.6.1",
     "seaborn~=0.13.2",
-    "tensorflow~=2.18.0"
+    "tensorflow~=2.19.1"
 ]
