--- a/pyproject.toml
+++ b/pyproject.toml
@@ -33,11 +33,11 @@ dependencies = [
     "cloudpickle~=3.1.1",
     "evosax~=0.2.0",
     "gymnasium~=1.2.1",
-    "jax-ai-stack~=2025.4.9",
+    "jax-ai-stack~=2025.10.28",
     "lz4~=4.4.4",
-    "matplotlib~=3.10.6",
+    "matplotlib~=3.10.7",
     "tensorboardX~=2.6.4",
-    "wandb~=0.22.0"
+    "wandb~=0.22.3"
 ]
 
 [project.optional-dependencies]
@@ -50,5 +50,8 @@ full = [
     # "ns3-ai==1.0.2",
     "pygame~=2.6.1",
     "seaborn~=0.13.2",
-    "tensorflow~=2.19.1"
+    "tensorflow~=2.20.0"
 ]
+
+[tool.setuptools]
+packages = ["reinforced_lib"]
